finished mixins; updated changelog and readme